--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://blackrockdigital.github.io"
+title:              Development Blog
+email:              shkim26blog@gmail.com
+description:        Here is development blog 
+author:             shkim26blog
+baseurl:            ""
+url:                "https://shkim26blog.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    BlackrockDigital
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    shkim26blog
+facebook_username:  
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
